--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@emeji/promise-try",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Promise.try polyfill",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {},
   "keywords": [
     "promise",
+    "promise.try",
     "try",
     "catch",
     "Promise",
